--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    maven {
+        name "Terraformers"
+        url "https://maven.terraformersmc.com/releases/"
+    }
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
 }
 
 loom {
@@ -26,6 +33,7 @@ loom {
         "buggymod" {
             sourceSet sourceSets.main
             sourceSet sourceSets.client
+
         }
     }
 
@@ -44,6 +52,9 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"
+
+    modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modImplementation include( "maven.modrinth:midnightlib:${project.midnightlib_version}")
 }
 
 processResources {
