--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ archives_base_name=buggymod
 
 # Dependencies
 fabric_version=0.92.1+1.20.1
+modmenu_version=7.2.2
+midnightlib_version =1.4.1-fabric
